--- a/bricks.html
+++ b/bricks.html
@@ -33,12 +33,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/bricks.html">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/bricks.jpg">
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quality Bricks in Harare | All Types | BuildMate Zimbabwe">
-    <meta name="twitter:description"
-          content="Get all types of bricks in Harare - compressed, common, load bearing, face bricks & Botswana bricks. Competitive prices with reliable delivery.">
+    <meta property="og:image:alt" content="Quality Bricks in Harare">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.buildmate.co.zw/bricks.html">
