--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-          content="BuildMate Zimbabwe - Coming August 2025! Nationwide supplier of bricks, sand & stones. Transport services across Zimbabwe. Launching in 2025.">
+          content="BuildMate Zimbabwe is your premier supplier of quality construction materials including bricks, sand & stones. We offer reliable delivery services across all provinces.">
     <meta name="keywords"
           content="
           buy building materials online,
@@ -20,19 +20,13 @@
 
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:site_name" content="BuildMate Zimbabwe">
-    <meta property="og:title" content="BuildMate Zimbabwe | Construction Materials Nationwide (Coming 2025)">
+    <meta property="og:title" content="BuildMate Zimbabwe | Construction Materials Online">
     <meta property="og:description"
-          content="Premier supplier of bricks, sand & stones with nationwide transport services. Launching soon across Zimbabwe.">
+          content="BuildMate Zimbabwe is your premier supplier of quality construction materials including bricks, sand & stones. We offer reliable delivery services across all provinces.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/logo-horizontal.jpg">
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="BuildMate Zimbabwe | Construction Materials (Coming 2025)">
-    <meta name="twitter:description"
-          content="Nationwide supplier of quality bricks, sand & stones with reliable transport. Launching soon!">
-
+    <meta property="og:image:alt" content="BuildMate Zimbabwe Logo">
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.buildmate.co.zw/">
 
@@ -88,7 +82,7 @@
         }
     </script>
 
-    <title>BuildMate Zimbabwe | Quality Construction Materials & Transport (Coming August 2025)</title>
+    <title>BuildMate Zimbabwe | Construction Materials Online</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -148,7 +142,9 @@
                 <li>Load Bearing Bricks</li>
                 <li>Botswana Bricks</li>
             </ul>
-            <a href="bricks.html" class="cta-button" style="display: inline-block; margin-top: 15px; padding: 8px 15px; font-size: 0.9rem;">View All Bricks</a>
+            <a href="bricks.html" class="cta-button"
+               style="display: inline-block; margin-top: 15px; padding: 8px 15px; font-size: 0.9rem;">View All
+                Bricks</a>
         </div>
         <div class="material-category">
             <h3>Sand & Stones</h3>
@@ -158,9 +154,12 @@
                 <li>3/4 Stones</li>
             </ul>
             <div style="margin-top: 15px;">
-                <a href="pitsand.html" class="cta-button" style="display: inline-block; padding: 8px 15px; font-size: 0.9rem; margin-right: 10px;">Pitsand</a>
-                <a href="riversand.html" class="cta-button" style="display: inline-block; padding: 8px 15px; font-size: 0.9rem; margin-right: 10px;">Riversand</a>
-                <a href="3-4-stones.html" class="cta-button" style="display: inline-block; padding: 8px 15px; font-size: 0.9rem;">3/4 Stones</a>
+                <a href="pitsand.html" class="cta-button"
+                   style="display: inline-block; padding: 8px 15px; font-size: 0.9rem; margin-right: 10px;">Pitsand</a>
+                <a href="riversand.html" class="cta-button"
+                   style="display: inline-block; padding: 8px 15px; font-size: 0.9rem; margin-right: 10px;">Riversand</a>
+                <a href="3-4-stones.html" class="cta-button"
+                   style="display: inline-block; padding: 8px 15px; font-size: 0.9rem;">3/4 Stones</a>
             </div>
         </div>
     </div>
