--- a/pitsand.html
+++ b/pitsand.html
@@ -31,12 +31,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/pitsand.html">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/pitsand.jpg">
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quality Pitsand in Harare | BuildMate Zimbabwe">
-    <meta name="twitter:description"
-          content="Get high-quality pitsand for your construction and plastering projects in Harare. Competitive prices with reliable delivery.">
+    <meta property="og:image:alt" content="Quality Pitsand in Harare">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.buildmate.co.zw/pitsand.html">
