--- a/riversand.html
+++ b/riversand.html
@@ -31,12 +31,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/riversand.html">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/riversand.jpg">
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Premium Riversand in Harare | BuildMate Zimbabwe">
-    <meta name="twitter:description"
-          content="Get high-quality washed riversand for your construction projects in Harare. Competitive prices with reliable delivery.">
+    <meta property="og:image:alt" content="High quality riversand in Harare">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.buildmate.co.zw/riversand.html">
