--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <!-- Contact Bar -->
 <div class="contact-bar">
-    Coming August 2025! For inquiries: <a href="tel:+263782135087">+263 78 213 5087</a> | Sunway City, Harare
+    Get Early Access & Exclusive Deals! Need Bricks or Sand Today? <a href="tel:+263782135087">Call/WhatsApp Us Now</a> | Sunway City, Harare
 </div>
 
 <!-- Navigation -->
@@ -127,20 +127,17 @@
 
 <!-- Header -->
 <header>
-    <div class="coming-soon-container">
-        <div class="logo">
-            <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
-        </div>
+    <div class="logo">
+        <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
     </div>
 </header>
 
 <!-- Main Content -->
-<main class="coming-soon-container">
+<main class="content-container">
     <div class="launch-message">
         Zimbabwe's Premier Construction Materials and Transport Service!
     </div>
-    <p>BuildMate Zimbabwe will launch in early 2025 as your trusted source for quality construction materials and
-        reliable transport services across all provinces.</p>
+    <p>BuildMate Zimbabwe is your trusted source for quality construction materials and reliable transport services across all provinces.</p>
 
     <!-- Countdown Section -->
     <div id="countdown-section" style="margin: 2rem 0;">
@@ -200,7 +197,7 @@
     </div>
 
     <div class="cta-box">
-        <h2 style="color: white; margin-top: 0;">Get Early Access!</h2>
+        <h2 style="color: white; margin-top: 0;">Get Early Access & Exclusive Deals!</h2>
         <p>Be the first to know when we launch and receive exclusive offers.</p>
         <form action="https://your-email-service.com/subscribe" method="POST" style="margin-top: 20px;">
             <input type="text" name="name" placeholder="Your Name" required
@@ -211,12 +208,15 @@
                    style="padding: 12px; width: 100%; max-width: 400px; border: none; border-radius: 5px; margin-bottom: 10px;">
             <button type="submit" class="cta-button">Notify Me</button>
         </form>
+        <div style="margin-top: 2rem;">
+            <strong>Architects:</strong> Be the First to Showcase Plans - <a href="#waitlist" class="cta-button" style="font-size:0.9rem;">Join Waitlist</a>
+        </div>
     </div>
 </main>
 
 <!-- Footer -->
 <footer>
-    <div class="coming-soon-container">
+    <div class="content-container">
         <p>&copy; 2025 BuildMate Zimbabwe. All rights reserved.</p>
         <p>Sunway City, Harare</p>
         <p>Email: <a href="mailto:sales@buildmate.co.zw" style="color: var(--accent);">sales@buildmate.co.zw</a> |
