--- a/riversand.html
+++ b/riversand.html
@@ -87,7 +87,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <!-- Contact Bar -->
 <div class="contact-bar">
-    Coming August 2025! For inquiries: <a href="tel:+263782135087">+263 78 213 5087</a> | Sunway City, Harare
+    Get Early Access & Exclusive Deals! Need Bricks or Sand Today? <a href="tel:+263782135087">Call/WhatsApp Us Now</a> | Sunway City, Harare
 </div>
 
 <!-- Navigation -->
