move images to folder

--- a/3-4-stones.html
+++ b/3-4-stones.html
@@ -37,7 +37,7 @@
     <link rel="canonical" href="https://www.buildmate.co.zw/3-4-stones.html">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -62,6 +62,7 @@
             "@type": "Product",
             "name": "3/4 Construction Stones",
             "description": "High-quality 3/4 stones for construction projects in Harare",
+            "logo": "https://www.buildmate.co.zw/images/logo.png",
             "brand": {
                 "@type": "Brand",
                 "name": "BuildMate Zimbabwe"
@@ -87,7 +88,8 @@
 <!-- End Google Tag Manager (noscript) -->
 <!-- Contact Bar -->
 <div class="contact-bar">
-    Get Early Access & Exclusive Deals! Need Bricks or Sand Today? <a href="tel:+263782135087">Call/WhatsApp Us Now</a> | Sunway City, Harare
+    Get Early Access & Exclusive Deals! Need Bricks or Sand Today? <a href="tel:+263782135087">Call/WhatsApp Us Now</a>
+    | Sunway City, Harare
 </div>
 
 <!-- Navigation -->
@@ -105,7 +107,7 @@
 <header>
     <div class="coming-soon-container">
         <div class="logo">
-            <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
+            <img src="images/logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
         </div>
     </div>
 </header>
@@ -120,7 +122,8 @@
         </div>
         <div class="product-details">
             <h2>Premium Construction Stones</h2>
-            <p>Our high-quality 3/4 stones are carefully graded to meet construction standards in Harare. Perfect for concrete work, foundations, and drainage applications.</p>
+            <p>Our high-quality 3/4 stones are carefully graded to meet construction standards in Harare. Perfect for
+                concrete work, foundations, and drainage applications.</p>
 
             <div class="price-badge">
                 Competitive Prices | Call for Quote
@@ -181,7 +184,8 @@
     <div class="benefits-list">
         <h2>Frequently Asked Questions</h2>
         <h3>What is the price of 3/4 stones in Harare?</h3>
-        <p>Our 3/4 stones prices are competitive and based on quantity and delivery location. Please contact us for current pricing.</p>
+        <p>Our 3/4 stones prices are competitive and based on quantity and delivery location. Please contact us for
+            current pricing.</p>
 
         <h3>How much 3/4 stones do I need for my project?</h3>
         <p>The amount needed depends on your project:</p>
@@ -192,7 +196,8 @@
         <p>Our team can help you calculate the exact quantity needed.</p>
 
         <h3>Do you supply to large construction projects?</h3>
-        <p>Yes, we supply both individual homeowners and large construction projects with bulk quantities at competitive rates.</p>
+        <p>Yes, we supply both individual homeowners and large construction projects with bulk quantities at competitive
+            rates.</p>
 
         <h3>Are your stones washed?</h3>
         <p>Yes, our 3/4 stones are thoroughly washed to remove dust and ensure better bonding in concrete mixes.</p>
