--- a/bricks.html
+++ b/bricks.html
@@ -39,7 +39,7 @@
     <link rel="canonical" href="https://www.buildmate.co.zw/bricks.html">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -64,6 +64,7 @@
             "@type": "Product",
             "name": "Construction Bricks",
             "description": "High-quality bricks for construction projects in Harare - compressed, common, load bearing, face bricks & Botswana bricks",
+            "logo": "https://www.buildmate.co.zw/images/logo.png",
             "brand": {
                 "@type": "Brand",
                 "name": "BuildMate Zimbabwe"
@@ -107,7 +108,7 @@
 <header>
     <div class="coming-soon-container">
         <div class="logo">
-            <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
+            <img src="images/logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
         </div>
     </div>
 </header>
