--- a/riversand.html
+++ b/riversand.html
@@ -37,7 +37,7 @@
     <link rel="canonical" href="https://www.buildmate.co.zw/riversand.html">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -62,6 +62,7 @@
             "@type": "Product",
             "name": "Premium Washed Riversand",
             "description": "High-quality washed riversand for construction projects in Harare",
+            "logo": "https://www.buildmate.co.zw/images/logo.png",
             "brand": {
                 "@type": "Brand",
                 "name": "BuildMate Zimbabwe"
@@ -105,7 +106,7 @@
 <header>
     <div class="coming-soon-container">
         <div class="logo">
-            <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
+            <img src="images/logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
         </div>
     </div>
 </header>
