--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="canonical" href="https://www.buildmate.co.zw/">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -54,7 +54,9 @@
             "@context": "https://schema.org",
             "@type": "ConstructionBusiness",
             "name": "BuildMate Zimbabwe",
-            "image": "https://www.buildmate.co.zw/images/logo.png",
+            "description": "BuildMate Zimbabwe is your premier supplier of quality construction materials including bricks, sand & stones. We offer reliable delivery services across all provinces.",
+            "logo": "https://www.buildmate.co.zw/images/logo.png",
+            "image": "https://www.buildmate.co.zw/images/logo-horizontal.jpg",
             "@id": "https://www.buildmate.co.zw",
             "url": "https://www.buildmate.co.zw",
             "telephone": "+263782135087",
@@ -78,7 +80,6 @@
                 "opens": "07:30",
                 "closes": "17:00"
             },
-            "description": "BuildMate Zimbabwe is your premier supplier of quality construction materials including bricks, sand & stones. We offer reliable delivery services across all provinces.",
             "potentialAction": [
                 {
                     "@type": "OrderAction",
@@ -128,7 +129,7 @@
 <!-- Header -->
 <header>
     <div class="logo">
-        <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
+        <img src="images/logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
     </div>
 </header>
 
