--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
-            "@type": "ConstructionBusiness",
+            "@type": "Organization",
             "name": "BuildMate Zimbabwe",
             "description": "BuildMate Zimbabwe is your premier supplier of quality construction materials including bricks, sand & stones. We offer reliable delivery services across all provinces.",
             "logo": "https://www.buildmate.co.zw/images/logo.png",
