add tags for google analytics

--- a/bricks.html
+++ b/bricks.html
@@ -57,6 +57,16 @@
     })(window, document, 'script', 'dataLayer', 'GTM-K9MBBS7Z');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ5CNHYRFD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-WZ5CNHYRFD');
+    </script>
+
     <!-- Schema Markup -->
     <script type="application/ld+json">
         {
