--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 
-
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ5CNHYRFD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'G-WZ5CNHYRFD');
@@ -105,7 +108,8 @@
 
 <!-- Contact Bar -->
 <div class="contact-bar">
-    Get Early Access & Exclusive Deals! Need Bricks or Sand Today? <a href="tel:+263782135087">Call/WhatsApp Us Now</a> | Sunway City, Harare
+    Get Early Access & Exclusive Deals! Need Bricks or Sand Today? <a href="tel:+263782135087">Call/WhatsApp Us Now</a>
+    | Sunway City, Harare
 </div>
 
 <!-- Navigation -->
@@ -129,9 +133,11 @@
 <!-- Main Content -->
 <main class="content-container">
     <div class="launch-message">
+        <h1>BuildMate Zimbabwe</h1>
         Zimbabwe's Premier Construction Materials and Transport Service!
     </div>
-    <p>BuildMate Zimbabwe is your trusted source for quality construction materials and reliable transport services across all provinces.</p>
+    <p>BuildMate Zimbabwe is your trusted source for quality construction materials and reliable transport services
+        across all provinces.</p>
 
     <!-- Countdown Section -->
     <div id="countdown-section" style="margin: 2rem 0;">
@@ -203,7 +209,8 @@
             <button type="submit" class="cta-button">Notify Me</button>
         </form>
         <div style="margin-top: 2rem;">
-            <strong>Architects:</strong> Be the First to Showcase Plans - <a href="#waitlist" class="cta-button" style="font-size:0.9rem;">Join Waitlist</a>
+            <strong>Architects:</strong> Be the First to Showcase Plans - <a href="#waitlist" class="cta-button"
+                                                                             style="font-size:0.9rem;">Join Waitlist</a>
         </div>
     </div>
 </main>
